SortMaster/rashmi-minor change in the shellSort and write unit tests according to that.